Prevent long preview mode names from making the select element overflow the side panel. Fix #10240 (#10354)

--- a/client/scss/components/_preview-panel.scss
+++ b/client/scss/components/_preview-panel.scss
@@ -161,15 +161,11 @@
   }
 
   &__modes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
     margin-bottom: 0;
     background-color: theme('colors.surface-page');
 
-    .w-field__label {
-      margin-bottom: 0;
+    .w-field__input {
+      padding-inline-end: 0;
     }
   }
 
